--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,12 @@ header{
 .O a:hover{
     color: blueviolet;
 }
+.tab{
+    display: none;
+}
+.responsive_nav{
+    display: none;
+}
 /* -------language start --------- */
 .lang-menu{
     display: flex;
@@ -200,10 +206,10 @@ section{
     border-radius: 10px;
     margin: 20px;
     transition: 0.5s ease;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
+    -webkit-border-radius:;
+    -moz-border-radius:;
+    -ms-border-radius:;
+    -o-border-radius:;
     -webkit-transition: 0.5s ease;
     -moz-transition: 0.5s ease;
     -ms-transition: 0.5s ease;
@@ -307,7 +313,64 @@ section{
         align-items: center;
     }
 }
-
+@media(max-width:768px) and (min-width:0px){
+    .tab{
+        display: inline;
+        font-size: 1.5rem;
+    }
+    .O{
+        display: none;
+    }
+    .responsive_nav{
+        display: block;
+        height: 100vh;
+        width: 60%;
+        position: fixed;
+        z-index: 999;
+        top: 0;
+        right: 0;
+        background-color: #fff;
+        color: blue;
+        padding: 2.5%;
+        transition: 0.5s;
+        -webkit-transition: 0.5s;
+        -moz-transition: 0.5s;
+        -ms-transition: 0.5s;
+        -o-transition: 0.5s;
+        transform: translateX(100%);
+        -webkit-transform: translateX(100%);
+        -moz-transform: translateX(100%);
+        -ms-transform: translateX(100%);
+        -o-transform: translateX(100%);
+}
+    .responsive_nav div{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 5%;
+    }
+    .responsive_nav div h2{
+        text-transform: uppercase;
+    }
+    .responsive_nav ul{
+        list-style-type: none;
+    }
+    .responsive_nav li{
+        margin-bottom: 2.5%;
+        text-transform: capitalize;
+    }
+    .responsive_nav a{
+        text-decoration: none;
+        color: blue;
+    }
+    .open_close_tab{
+        transform: translateX(0%);
+        -webkit-transform: translateX(0%);
+        -moz-transform: translateX(0%);
+        -ms-transform: translateX(0%);
+        -o-transform: translateX(0%);
+}
+}
 @media(max-width:641px){
     body{
         
