--- a/css/style.css
+++ b/css/style.css
@@ -206,10 +206,10 @@ section{
     border-radius: 10px;
     margin: 20px;
     transition: 0.5s ease;
-    -webkit-border-radius:;
-    -moz-border-radius:;
-    -ms-border-radius:;
-    -o-border-radius:;
+    -webkit-border-radius:0.5s ease;
+    -moz-border-radius:0.5s ease;
+    -ms-border-radius:0.5s ease;
+    -o-border-radius:0.5s ease;
     -webkit-transition: 0.5s ease;
     -moz-transition: 0.5s ease;
     -ms-transition: 0.5s ease;
@@ -333,7 +333,7 @@ section{
         color: blue;
         padding: 2.5%;
         transition: 0.5s;
-        -webkit-transition: 0.5s;
+        -webkit-transition: 0.5s ease-in-out;
         -moz-transition: 0.5s;
         -ms-transition: 0.5s;
         -o-transition: 0.5s;
