--- a/css/style.css
+++ b/css/style.css
@@ -206,10 +206,10 @@ section{
     border-radius: 10px;
     margin: 20px;
     transition: 0.5s ease;
-    -webkit-border-radius:0.5s ease;
-    -moz-border-radius:0.5s ease;
-    -ms-border-radius:0.5s ease;
-    -o-border-radius:0.5s ease;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
     -webkit-transition: 0.5s ease;
     -moz-transition: 0.5s ease;
     -ms-transition: 0.5s ease;
@@ -347,7 +347,7 @@ section{
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin-bottom: 5%;
+        margin-bottom: 20%;
     }
     .responsive_nav div h2{
         text-transform: uppercase;
@@ -358,6 +358,7 @@ section{
     .responsive_nav li{
         margin-bottom: 2.5%;
         text-transform: capitalize;
+        font-size: 16px;
     }
     .responsive_nav a{
         text-decoration: none;
@@ -369,7 +370,7 @@ section{
         -moz-transform: translateX(0%);
         -ms-transform: translateX(0%);
         -o-transform: translateX(0%);
-}
+    }
 }
 @media(max-width:641px){
     body{
